# orchestrion-js

./: CONTRIBUTING.md  Cargo.toml  package.json
.github/workflows/: ci.yml
src/: config.rs  error.rs  function_query.rs  instrumentation.rs  lib.rs  macros.rs
tests/: instrumentor_test.rs
tests/common/: instrumentations.yml  mod.rs  preamble.js
tests/constructor_cjs/: instrumentations.yml
tests/constructor_mjs/: instrumentations.yml
tests/expr_cjs/: mod.js  test.js
tests/expr_mjs/: test.mjs
tests/langchain_cjs/: instrumentations.yml
tests/single_channel_multiple_usages_cjs/: mod.js  mod.rs  test.js
tests/single_channel_multiple_usages_mjs/: mod.mjs  mod.rs  test.mjs
