[package]
name = "orchestrion-js"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

[lib]
# crate-type = ["cdylib"]
# This was originally set as above, but commented to run tests in tests folder.


[profile.release]
lto = true

[dependencies]
nodejs-semver = { version = "4.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
swc = "21.0.0"
swc_core = { version = "22.4.0", features = ["ecma_plugin_transform","ecma_quote"] }
swc_ecma_parser = "11.1.2"
swc_ecma_visit = { version = "8.0.0", features = ["path"] }

[dev-dependencies]
assert_cmd = "2.0.16"
serde_yaml = "0.9.34"
